<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#8bc2e6" >

    <RelativeLayout
        android:id="@+id/mine_headbar"
        android:layout_width="fill_parent"
        android:layout_height="40dp" >

        <ImageButton
            android:id="@+id/about_button_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:src="@drawable/icon_back" />

        <View
            android:layout_width="0.5dip"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@color/headbar_virtical_bg" 
            android:layout_toRightOf="@+id/button_back"/>

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="title"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
        <View
            android:layout_width="0.5dip"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@color/headbar_virtical_bg" 
            android:layout_toLeftOf="@+id/button_right"/>

    </RelativeLayout>


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/text_support"
        android:scrollbars="none"
        android:layout_below="@+id/mine_headbar"
        android:layout_marginBottom="10dp" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:id="@+id/image_about"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >

                <RelativeLayout
                    android:id="@+id/logo_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="200dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <ImageView
                        android:id="@+id/splash_logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"/>
                </RelativeLayout>

                <ImageView
                    android:id="@+id/splash_xunlu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/logo_layout"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/xunlu_icon" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_about"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                >

                <TextView
                    android:id="@+id/text_rtmap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_rtmap"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_version"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:autoLink="phone"
                    android:drawableLeft="@drawable/icon_weixin"
                    android:drawablePadding="10dip"
                    android:text="@string/title_about_weixin"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:drawableLeft="@drawable/icon_phone"
                    android:drawablePadding="10dip"
                    android:text="@string/title_about_phone"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/text_weibo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:drawableLeft="@drawable/icon_weibo"
                    android:drawablePadding="10dip"
                    android:text="@string/title_about_weibo"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/text_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:drawableLeft="@drawable/icon_page"
                    android:drawablePadding="10dip"
                    android:text="@string/title_about_page"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/text_support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dip"
        android:drawablePadding="10dip"
        android:text="@string/title_about_support"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

</RelativeLayout>