<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e5e5e5" >

    <RelativeLayout
        android:id="@+id/mine_headbar"
        android:layout_width="fill_parent"
        android:layout_height="40dp" >

        <ImageButton
            android:id="@+id/mine_button_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/standard_button_bg"
            android:layout_alignParentLeft="true"
            android:src="@drawable/icon_back" />

        <View
            android:layout_width="0.5dip"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@color/headbar_virtical_bg" 
            android:layout_toRightOf="@+id/button_back"/>

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="title"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
        <View
            android:layout_width="0.5dip"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@color/headbar_virtical_bg" 
            android:layout_toLeftOf="@+id/button_right"/>

        <Button
            android:id="@+id/button_right"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/standard_button_bg"
            android:text="注销" 
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mine_headbar" >

        <RelativeLayout
            android:id="@+id/mine_loginlayout"
            android:layout_width="fill_parent"
            android:layout_height="150dp" >

            <LinearLayout
                android:id="@+id/mine_showlogin_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/mine_loginbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/tab_bnt_selector"
                    android:text="登录"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/mine_logindes"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mine_showheadimage_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:visibility="gone" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/mine_userimage" />

                <TextView
                    android:id="@+id/mine_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="mine"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/mine_loginlayout"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/mine_mymap"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/mine_item_selector" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/mine_mymap"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/mine_arrow" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/mine_item_select" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/mine_coupon"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/mine_couponswitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/v4_checkbox_bg"
                    android:button="@null"
                    android:checked="true"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/mine_about"
                android:textColor="#000000"
                android:textSize="16sp" />

            <RelativeLayout
                android:id="@+id/mine_update"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/mine_item_selector" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/mine_update"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/mine_weibo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/mine_item_selector" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/mine_weibo"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/mine_arrow" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/mine_aboutus"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/mine_item_selector" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/mine_aboutus"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/mine_arrow" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/mine_banquan"
        android:textColor="#898989" />

</RelativeLayout>