<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map_container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <RelativeLayout
        android:id="@+id/mine_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_title_height" >

        <LinearLayout
            android:layout_width="@dimen/fragment_mine_tab_width"
            android:layout_height="@dimen/fragment_mine_tab_height"
            android:layout_centerInParent="true"
            android:background="@drawable/mine_tab_bg"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/talk"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/mine_tab_left"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/mine_tab_talk"
                android:textColor="@color/mine_tab_text_white" />

            <TextView
                android:id="@+id/friend"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/mine_tab_friend"
                android:textColor="@color/mine_tab_text_blue" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/nav_title_padding_right"
            android:text="@string/mine_tab_add"
            android:textColor="@color/mine_tab_text_blue"
            android:textSize="@dimen/fragment_mine_tab_add_size" />
    </RelativeLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/mine_title"
        android:background="@color/line" />

    <ListView
        android:id="@+id/mine_talk_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line"
        android:divider="@null"
        android:dividerHeight="0dp" >
    </ListView>

    <ListView
        android:id="@+id/mine_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line"
        android:visibility="gone" >
    </ListView>

    <RelativeLayout
        android:id="@+id/test_mine_login"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" >

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="用户名" />

        <EditText
            android:id="@+id/pass_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_name"
            android:hint="密码" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pass_word"
            android:text="登录" />

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pass_word"
            android:layout_alignParentRight="true"
            android:text="注册" />
    </RelativeLayout>

</RelativeLayout>